# Quran-MAyoub

./: CMakeLists.txt  README.md
src/: downloader.c  gui.c  gui.h  main.c  player.c  quran_player.h
